# GOSWMMIN

./: .gitignore  LICENSE  README.md  analyse_results.py  convert_to_swmmin.py  make_network.py  run_simulation.py
Figures/: Figure 4 - Spatiotemporal discretization w Timesteps.ipynb  Modelling IWS Users (Figure 2).ipynb
Figures/Figure Notebooks/: Figure 3- Pressure Spikes and Spatial Resolution.ipynb  Figure 4 - Spatiotemporal discretization w Timesteps.ipynb  Figure 5 - Spatiotemporal Discretization w solution speeds.ipynb  Figure S15 - Timing SWMMIN vs. Campisano.ipynb  Figure S3 - Storage Volume Comparison.ipynb  Figure S7 - Pipe Length Distribution.ipynb  Figures 5 and S14- Spatiotemporal Discretization w solution speeds.ipynb
Networks/: Empty_SWMM_Template.inp
Networks/Farina et al (2014)/: Comp_times_Farina.csv  Comp_times_solspeed.csv  Cont_times_Farina.csv  Continuity_Errors_solspeed.csv  Farina et al (2014).inp
Networks/Ismail/: ismail.inp  ismail.inp_DemandVolumes.csv  ismail_SWMMIN.inp
Networks/Linear Network/: consum_pattern.csv  (+7 more)
Notebooks/: Conversion_to_SWMMIN.ipynb  Run_SWMMIN.ipynb
Tools/: Continuity_Error_Computational_Time_VTS_w_solspeeds.py  Continuity_Error_Computational_Time_w_solspeeds.py  Continuity_Error_Computational_Time_w_timesteps.py
pkg/: CHANGES.TXT  GOSWMMIN.yaml  LICENSE  README.md  SWMMIN.yaml  manifest.in  pyproject.toml  requirements.txt
pkg/GOSWMMIN/: SWMMIN_sim.py  __init__.py  example.py
pkg/Resources/: Empty_SWMM_Template.inp  Linear_Network.inp  des_pressure.csv  q_des.csv  tank_areas.csv  tank_heights.csv
(+57 files in other folders)
